# jabber-mcp

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INBOX_HANDLERS_IMPLEMENTATION.md  MCP_INTEGRATION.md  README.md  ROSTER_SYNC_IMPLEMENTATION.md  STEP6_IMPLEMENTATION.md  STEP9_IMPLEMENTATION.md  TESTING_REPORT.md  USER_STORY.md  integration_test.py  pyproject.toml  roster_implementation_summary.md  single_session_test.py  test_inbox_get.py  test_inbox_get_single.py  test_inbox_handlers.py  test_mcp_tool_calls.py  test_mcp_tools.py
.github/workflows/: ci.yml
docs/: SEND_COMMAND_DESIGN.md  converters.md  inbox_functionality.md  mcp_audit.md  testing.md
examples/: inbox_demo.py
src/jabber_mcp/: __about__.py  __init__.py  __main__.py  address_book.py  converters.py  mcp_stdio_server.py  xmpp_adapter.py  xmpp_mcp_server.py
src/jabber_mcp/bridge/: __init__.py  mcp_bridge.py
tests/: __init__.py  test_address_book.py  test_config.py  test_converters.py  test_e2e_send.py  test_e2e_xmpp_real.py  test_enhanced.py  test_error_handling.py  test_inbox_functionality.py  test_inbox_limits.py  test_mcp_bridge.py  test_mcp_integration_with_xmpp_mock.py  test_queue_operations.py  test_roster_sync.py  test_xmpp_adapter.py  test_xmpp_inbox_integration.py  test_xmpp_mcp_integration.py
